# allegory

./: .gitignore  Cargo.toml  TODO  chess.py  main.py  primitive.py  run.sh  search.py
perf/: 2020-01-05_1_perf.txt  2020-01-06_1_perf.txt
serve/: 404.html  501.html  chess.css  chess.html  chessboard-1_0_0-patched.js  chessboard-1_0_0.css  controller.js
src/: debug.py  http_server.py  lib.rs  main.rs  perf_cprofile.py  perf_test.py  perf_timeit.py  primitive.py  search.py  vector2.py
src/chess/: chess_agency.py  chess_consts.py  chess_movement.py  chess_search.py  chess_state.py  chess_strategy.py
src/python/: http_server.py  primitive.py  search.py  vector2.py
src/python/chess/: chess_agency.py  chess_consts.py  chess_interop.py  chess_movement.py  chess_state.py  chess_strategy.py
src/python/entry/: debug.py  perf_cprofile.py  perf_timeit.py  py_to_rust.py
src/python/rust/: py_to_rust.py
src/rust/: mod.rs  search.rs
src/rust/chess/: mod.rs
src/rust/http/: router.rs  server.rs
src/rust/threads/: thread_pool.rs
static/: chess.html
tests/: test_chess.py  test_chess_agency.py  test_chess_attacks.py  test_chess_interop.py  test_chess_seach.py  test_chess_state.py  test_chess_strategy.py  test_mate_finding.py  test_movement_basic.py  test_movement_castling.py  test_movement_check.py  test_primitive.py  test_search.py  test_vector2.py
